MDEV-8212 alter table - failing to ADD PRIMARY KEY IF NOT EXISTS when existing index of same as column name.         The default name for the primary key is rather 'PRIMARY' instead of the indexed column name.